fix(TDP-4918): firefox blurry icons (#1070)
* fix(TDP-4918): firefox blurry icons

* style: prefix free

--- a/dataprep-webapp/src/app/css/base/_base.scss
+++ b/dataprep-webapp/src/app/css/base/_base.scss
@@ -24,4 +24,8 @@ body {
 		padding: 0;
 		list-style: none;
 	}
+
+	svg {
+		transform: scale(1);
+	}
 }
